--- a/APSA_2012/Paper/Bibliography_EBMA.bib
+++ b/APSA_2012/Paper/Bibliography_EBMA.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Florian Hollenbach at 2012-08-12 20:42:58 -0400 
+%% Created for Florian Hollenbach at 2012-08-13 13:57:19 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Baghestani:2008,
+	Author = {Baghestani, Hamid},
+	Date-Added = {2012-08-13 16:57:21 +0000},
+	Date-Modified = {2012-08-13 16:58:28 +0000},
+	Journal = {Journal of Policy Modeling},
+	Number = {1},
+	Pages = {101-110},
+	Title = {Federal Reserve versus private information: Who is the best unemployment rate predictor?},
+	Volume = {30},
+	Year = {2008}}
 
 @unpublished{Cuzan:2004,
 	Author = {Cuz\`an, Alfred G. and Bundrick, Charles M.},
